kube/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: glaa-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: glaa-web
    spec:
      containers:
      - name: glaa-test-core
        image: quay.io/ukhomeofficedigital/glaa-web:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 4000
