kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: glaa-test-service
  name: glaa-test-service
spec:
  ports:
  - name: exposed-port
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    name: glaa-web
